--- a/Dok/seminar.bib
+++ b/Dok/seminar.bib
@@ -8,64 +8,63 @@
 
 % Julius
 @MISC{fmSignalkunde,
-  author = "Detlef Mietke",
-  title = "Frequenzmodulation",
+  author = {Detlef Mietke},
+  title = {Frequenzmodulation},
   howpublished = {http://elektroniktutor.de/signalkunde/fm.html},
-  year = "Stand 31.05.2015"
+  year = {Stand 31.05.2015}
   }
 
 @MISC{dx7manual,
-  author = "Yamaha",
-  title = "DX7 Operating Manual",
-  year = "1983",
+  author = {Yamaha},
+  title = {DX7 Operating Manual},
+  year = {1983},
   }
 
 @Book{soundofinnovation,
-author = "Andrew J. Nelson",
-title =" The sound of innovation - Stanford and the computer music revolution",
-year = "2015",
-publisher = "MIT Press",
-series="Inside Technology",
-number = "978-0-262-02876-9"
+author = {Andrew J. Nelson},
+title ={The sound of innovation - Stanford and the computer music revolution},
+year = {2015},
+publisher = {MIT Press},
+series={Inside Technology},
+ISBN = {978-0-262-02876-9}
 }
 
 @MISC{fatherofdigitalmusik,
-  author = "Zachary Crockett",
-  title = "The Father of the Digital Synthesizer",
+  author = {Zachary Crockett},
+  title = {The Father of the Digital Synthesizer},
   howpublished = {http://priceonomics.com/the-father-of-the-digital-synthesizer/},
-  year = "Stand 23.03.2015"
+  year = {Stand 23.03.2015}
   }
 
 @Misc{fmGS1,
-  author = "Markus Fiedler ",
-  title = "Die FM-Synthese, Ein Überblick",
+  author = {Markus Fiedler},
+  title = {Die FM-Synthese, Ein Überblick},
   howpublished = {http://www.markus-fiedler.de/fm/fm.html},
-  year = "Stand 09.06.2015"
+  year = {Stand 09.06.2015}
   }
 
 @Book{fmtheory,
-author = "John M. Chowning and David Bristow",
-title = "FM Theory \& Applications - By Musicians for Musicians",
-publisher = "Yamaha Music Foundation",
-number = "4-636-17482-8",
-year = "1986"
+author = {John M. Chowning and David Bristow},
+title = {FM Theory \& Applications - By Musicians for Musicians},
+publisher = {Yamaha Music Foundation},
+ISBN = {4-636-17482-8},
+year = {1986}
 }
 
 @Book{matheBuch,
-author = "Peter Stingl",
-title = "Mathematik für Fachhochschulen",
-publisher = "Carl Hanser Verlag München Wien",
-number = "3-446-13481-6",
-year = "1981"
+author = {Peter Stingl},
+title = {Mathematik für Fachhochschulen},
+publisher = {Carl Hanser Verlag München Wien},
+ISBN = {3-446-13481-6},
+year = {1981}
 }
 
 @Misc{phasenhub,
-author = "Klaus Lipinski, Dipl.-Ing. der Nachrichtentechnik",
-title = "Frequenzhub - frequency deviation",
+author = {Klaus Lipinski, Dipl.-Ing. der Nachrichtentechnik},
+title = {Frequenzhub - frequency deviation},
 howpublished = {http://www.itwissen.info/definition/lexikon/Frequenzhub-frequency-deviation.html},
-year = "Stand 31.05.2015"
+year = {Stand 31.05.2015},
 }
-
 
 % Bulli
 @misc{oya1987electronic,
@@ -153,7 +152,7 @@ year = "Stand 31.05.2015"
 @book{stotz,
   title={Computergest{\"u}tzte Audio- und Videotechnik: Multimediatechnik in der Anwendung - 2. Aufl.},
   author={Stotz, D.},
-  number={978-3-642-23252-7},
+  isbn={978-3-642-23252-7},
   year={2011},
   publisher={Springer Berlin Heidelberg}
 }
@@ -161,7 +160,7 @@ year = "Stand 31.05.2015"
 @book{barkowsky,
   title={Einf{\"u}hrung in die musikalische Akustik},
   author={Barkowsky, J.},
-  number={978-3-795-90909-3},
+  isbn={978-3-795-90909-3},
   series={Taschenb{\"u}cher zur Musikwissenschaft},
   year={2009},
   publisher={Florian Noetzel, Heinrichshofen-B{\"u}cher}
