--- a/Dok/Kapitel/BesonderheitenFmSynthese.tex
+++ b/Dok/Kapitel/BesonderheitenFmSynthese.tex
@@ -65,7 +65,7 @@ Eine weitere, erwähnenswerte Eigenschaft lässt sich gewinnen, wenn die momenta
 \omega_0+\frac{d\varphi(t)}{dt}&=&\omega_0+k_{FM}\cdot f(t) \\
 \frac{d\varphi(t)}{dt}&=&k_{FM}\cdot f(t)
 \end{eqnarray*}
-Draus ergibt sich für ein gemeinsames Modulationssignal \(m(t)\) folgender Zusammenhang:
+Daraus ergibt sich für ein gemeinsames Modulationssignal \(m(t)\) folgender Zusammenhang:
 \begin{center}
 \fbox{\parbox{7.5cm} { 
 	\begin{eqnarray*}
@@ -179,7 +179,8 @@ B_{FM}=2nf_m=2(I+1)f_m
 \label{eq:fmBandwidth}
 \end{equation} 
 Die Bandbreite des synthetisierten Tones ist somit abhängig vom Modulationsindex und der Modulationsfrequenz. 
-Dieser Zusammenhang lässt sich aus dem graphischen Verlauf der Bessel-Funktion ablesen (s. \ref{fig:bessel2D}). Für einen festen Wert $I$, nimmt $J_n(I)$ ab. Für ein ausreichend großes $n$ können weitere Seitenfrequenz ignoriert werden, da ihre Amplitude vernachlässigbar klein werden. Durch die obige Formel kann auch ein Zusammenhang zwischen Modulationsindex und die Anzahl der Seitenfrequenzbänder hergestellt werden. Die Anzahl der signifikanten Seitenfrequenzen $n$ ist in etwa $I+1$. Wird zusätzlich ein zeitabhängiger Modulationsindex $I(t)$ verwendet, kann die Bandbreite des Spektrums zusätzlich variiert werden. Dies schafft weitere Möglichkeiten bei der Klanggestaltung. 
+Dieser Zusammenhang lässt sich aus dem graphischen Verlauf der Bessel-Funktion ablesen (s. \ref{fig:bessel2D}). Für einen festen Wert $I$, nimmt $J_n(I)$ ab. Für ein ausreichend großes $n$ können weitere Seitenfrequenz ignoriert werden, da ihre Amplitude vernachlässigbar klein werden. 
+Durch die obige Formel kann auch ein Zusammenhang zwischen Modulationsindex und die Anzahl der Seitenfrequenzbänder hergestellt werden. Die Anzahl der signifikanten Seitenfrequenzen $n$ ist in etwa $I+1$. Wird ein zeitabhängiger Modulationsindex $I(t)$ verwendet, kann die Bandbreite des Spektrums zusätzlich variiert werden. Dies schafft weitere Möglichkeiten bei der Klanggestaltung. 
 
 Wie in Kapitel \nameref{PrinzipFM} beschrieben, ist es jedoch schwer das Ergebnis der FM-Synthese vorher zusehen. Dies liegt zum Einen an dem schwingenden Verlauf der Bessel-Funktionen und deren Wirken auf die Seitenschwingungen. Abbildung~\ref{fig:bessel3D} stellt Bessel-Funktionen $J_0$ bis $J_{15}$ dreidimensional, in Abhängigkeit des Modulationsindexes dar.
 Durch genaue Betrachtung des Funktionsverlaufs lässt sich ein Gefühl für die Veränderung der Seitenfrequenzen entwickeln.
