--- a/Dok/seminar.tex
+++ b/Dok/seminar.tex
@@ -66,10 +66,9 @@
 
 \input{Kapitel/PraktischeAnwendungderFM-Synthese.tex}
 
-\input{Kapitel/Praxis.tex}
-
 \input{Kapitel/Fazit.tex}
 
+\newpage
 \bibliography{seminar}
 
 \end{document}
