Y-Achsen wie Gary

--- a/Dok/Kapitel/EinfacheVskomplexeFMSynthese.tex
+++ b/Dok/Kapitel/EinfacheVskomplexeFMSynthese.tex
@@ -172,7 +172,7 @@ Um die Zusammenhänge grafisch zu veranschaulichen, nehmen wir zunächst einen T
 Quelle: Eigene Darstellung in MATLAB
 \end{figure}
 \FloatBarrier
-Man sieht im Spektrum, dass wie erwartet die Trägerfrequenz bei 1250Hz liegt, und das erste Seitenband bei $ 1250 + 450 = 1700Hz$. Die Additionsterme aus \ref{eq:wallofequations} legen nun nahe, dass bei einer Modulation eines Trägers durch zwei parallele Modulatoren jeweils oberhalb und unterhalb jedes von $M1$ erzeugten Seitenbandes in Abständen der Frequenz von $M2$ dessen Seitenbänder liegen sollten. Zum Vergleich betrachten wir also zuerst noch einen Träger mit einer Frequenz, die dem ersten Seitenband von eben, $1700Hz$, entspricht, und modulieren diesen durch $M2 = 180Hz$, da wir so eine Prognose für die Seitenbänder von $M2$ bei einer gemeinsamen Modulation des Trägers erhalten. Beide Modulationsindizes erhalten den Wert $1$, da die Besselfunktionen mit steigender Ordnung für dieses Argument kontinuierlich kleiner werden. Damit werden die Frequenzbänder niedriger Ordnung stets erkennbarer sein als ihre Nachbarn höherer Ordnung, und der Vergleich der beiden gewählten Einzelmodulationen mit der Parallelmodulation gewinnt an Aussagekraft.
+Man sieht im Spektrum, dass wie erwartet die Trägerfrequenz bei 1250Hz liegt, und das erste Seitenband bei $ 1250 + 450 =$ 1700Hz. Die Additionsterme aus Gleichung \ref{eq:wallofequations} legen nun nahe, dass bei einer Modulation eines Trägers durch zwei parallele Modulatoren jeweils oberhalb und unterhalb jedes von $M1$ erzeugten Seitenbandes in Abständen der Frequenz von $M2$ dessen Seitenbänder liegen sollten. Zum Vergleich betrachten wir also zuerst noch einen Träger mit einer Frequenz, die dem ersten Seitenband von eben, 1700Hz, entspricht, und modulieren diesen durch $M2 =$ 180Hz, da wir so eine Prognose für die Seitenbänder von $M2$ bei einer gemeinsamen Modulation des Trägers erhalten. Beide Modulationsindizes erhalten den Wert 1, da die Besselfunktionen mit steigender Ordnung für dieses Argument kontinuierlich kleiner werden. Damit werden die Frequenzbänder niedriger Ordnung stets erkennbarer sein als ihre Nachbarn höherer Ordnung, und der Vergleich der beiden gewählten Einzelmodulationen mit der Parallelmodulation gewinnt an Aussagekraft.
 \FloatBarrier
 \begin{figure} [ht]
 \label{par1}
@@ -256,7 +256,7 @@ Visualisiert in MATLAB zeigt sich, dass sich erwartungsgemäß um jedes Seitenba
 Quelle: Eigene Darstellung in MATLAB
 \end{figure}
 \FloatBarrier
-Nun das Spektrum von $T$ nach der Modulation durch $M1$, moduliert durch $M2$. Zum Nachstellen wurde ein Träger mit 1750Hz moduliert, da dort das erste Seitenband aus obiger Modulation landet, und durch einen Modulator mit den Einstellungen von $M2$ moduliert:
+Nun das Spektrum von $T$ nach der Modulation durch $M1$, moduliert durch $M2$. Zum Nachstellen wurde ein Träger mit 1700Hz moduliert, da dort das erste Seitenband aus obiger Modulation landet, und durch einen Modulator mit den Einstellungen von $M2$ moduliert:
 \FloatBarrier
 \begin{figure} [ht]
 \centering
