--- a/Dok/Kapitel/TechnischesUndFormeln.tex
+++ b/Dok/Kapitel/TechnischesUndFormeln.tex
@@ -19,11 +19,12 @@ Quelle: \cite{fmtheory} - Fig. 2.6
 
 Dabei gilt: 
 
-$\bm{\sin(\theta) = \frac{\textbf{gegenüberliegende Seite}}{\textbf{Hypotenuse}} = \frac{a}{c}}$, wobei die Hypotenuse im Einheitskreis eine Länge von 1 hat. 
+\begin{equation}\bm{\sin(\theta) = \frac{\textbf{gegenüberliegende Seite}}{\textbf{Hypotenuse}} = \frac{a}{c} = \frac{a}{1} = a}\end{equation}
 
-$\bm{\to\sin(\theta) = \frac{a}{1} = a}$.
+Da die Hypotenuse im Einheitskreis eine Länge von 1 hat, darf c gleich 1 gesetzt werden.
+Analog dazu ergibt sich für den Kosinus folgende Gleichung:
 
-$\bm{\cos(\theta) = \frac{\textbf{anliegende Seite}}{\textbf{Hypotenuse}} = \frac{b}{c} = \frac{b}{1} = b}$ \cite[s. 22 - 27]{fmtheory} \\
+\begin{equation}\bm{\cos(\theta) = \frac{\textbf{anliegende Seite}}{\textbf{Hypotenuse}} = \frac{b}{c} = \frac{b}{1} = b}\end{equation} \cite[s. 22 - 27]{fmtheory} \\
 
 \begin{figure} [ht]
 \centering
@@ -40,18 +41,17 @@ Eine Veranschaulichung des Zusammenhangs zwischen dem Einheitskreis und der Sinu
 
 Der Unterschied zwischen Kosinus- und Sinusfunktion ist, dass Kosinus bei dem Funktionswert 1 beginnt und Sinus bei Funktionswert 0. Aus diesem Zusammenhang lassen sich folgende Beziehungen (Auch: \textbf{Komplementärformeln}) zwischen Sinus und Kosinus feststellen:\\
 
-\begin{lstlisting}[mathescape]
-$\bm{\sin(\frac {\pmb{\pi}}{2} – x) =\cos(x)}$
-$\bm{\cos(\frac {\pmb{\pi}}{2} – x) = \sin(x)}$ 
-\end{lstlisting}\cite[s. 218]{matheBuch}
+\begin{equation}\bm{\sin(\frac {\pmb{\pi}}{2} – x) =\cos(x)}\end{equation}
+\begin{equation}\bm{\cos(\frac {\pmb{\pi}}{2} – x) = \sin(x)}\end{equation}
+\cite[s. 218]{matheBuch}
 
-Überträgt man diese mathematischen Erkenntnisse nun auf einen Ton, so kann man dessen Funktion wie folgt beschreiben: 		$\bm{y(t) = A \cdot \sin(2 \pmb{\pi} f \cdot t)}$
+Überträgt man diese mathematischen Erkenntnisse nun auf einen Ton, so kann man dessen Funktion wie folgt beschreiben: 		\begin{equation}\bm{y(t) = A \cdot \sin(2 \pmb{\pi} f \cdot t)}\end{equation}
 
 Um \textbf{90\degree} oder $\bm{\frac{\pmb{\pi}}{2}}$ verschoben gilt: 		$\bm{y(t) = A\cdot \cos(2 \pmb{\pi} f\cdot t)}$
 
 Bei $\bm{A}$ handelt es sich um die \textbf{Amplitude} des Tons und somit dessen \textbf{Lautstärke}. Alle Funktionswerte der Funktion werden mit diesem Faktor multipliziert und dadurch größer oder kleiner.
 
-F ist wie oben bereits beschrieben die Frequenz des Tons. Sie gibt die \textbf{Anzahl der Schwingungen (Perioden) pro Sekunde} an und wird in $f=\frac{1}{T}$ angegeben, wobei T die Periodendauer in Sekunden ist. Die Einheit ist Hertz(Hz) oder $\frac{1}{s}$.
+Das f ist wie oben bereits beschrieben die Frequenz des Tons. Sie gibt die \textbf{Anzahl der Schwingungen (Perioden) pro Sekunde} an und wird in $f=\frac{1}{T}$ angegeben, wobei T die Periodendauer in Sekunden ist. Die Einheit ist Hertz(Hz) oder $\frac{1}{s}$.
 Je größer die Frequenz eines Tones ist, desto höher klingt er für das Ohr.
 
 Physikalisch gesehen ist ein Ton eine periodische Änderung des Luftdruckts, also Luftmoleküle die um ihre Ruhelage in Schwingung versetzt werden\cite[s. 111 f.]{zwicker}. 
@@ -64,7 +64,7 @@ In diesem Kapitel wird auf die unterschiedlichen Parameter eingegangen, welche i
 
 Die Parameter werden mit der Gleichung in Sinusdarstellung vorgestellt, d.h. Trägersignal und Modulator sind Sinusfunktionen. Dieselbe Erklärung funktioniert analog dazu auch mit Kosinusfunktionen für den Träger und den Modulator.
 Die Gleichung für eine frequenzmodulierte Welle lautet wie folgt:
-\[ \bm{e(t) = A sin(\pmb{\alpha} t + I sin(\pmb{\beta} t))} \]
+\begin{equation} \bm{e(t) = A sin(\pmb{\alpha} t + I sin(\pmb{\beta} t))} \end{equation}
 
 \begin{lstlisting}[mathescape]
 - $\bm{e(t)} $ beschreibt die [*Amplitude des modulierten Signals zum Zeitpunkt t*]
@@ -72,14 +72,12 @@ Die Gleichung für eine frequenzmodulierte Welle lautet wie folgt:
 - $\pmb{\alpha} $ ist die [*Kreisfrequenz des Trägersignals*] in $\bm{\frac{1}{s}}$ (üblich ist hier das Symbol $\omega_c$)
 - $\pmb{\beta} $ ist die [*Kreisfrequenz des Modulators*] in $\bm{\frac{1}{s}}$ (üblich ist hier das Symbol $\omega_m$, $\beta$ wird in der Nachrichtentechnik für den Modulationsindex verwendet)
 - $\bm{I}$ stellt den [*Modulationsindex*] dar. Dieser setzt sich wie folgt zusammen: $ \bm{I = \frac{d}{m}} $ mit:
-	= [*d: Frequenzhub der Modulation*], d.h. der größte momentane Unterschied zwischen der Frequenz des Trägers und der des modulierten Signals
-	Auch: Frequenzänderung, welche durch die Modulation der Trägerfrequenz verursacht wird
-	(Hier wird üblicher Weise $\Delta$f als Symbol verwendet)
+	= [*d: Frequenzhub der Modulation*], d.h. der größte momentane Unterschied zwischen der Frequenz des Trägers und der des modulierten Signals. Auch: Frequenzänderung, welche durch die Modulation der Trägerfrequenz verursacht wird (Hier wird üblicher Weise $\Delta$f als Symbol verwendet)
 	=[* m: Kreisfrequenz des Modulators*]
 \end{lstlisting} \cite{chowningPaper}
 
 Der Modulationsindex beschreibt also das Verhältnis des Frequenzhubs zur Modulationsfrequenz.
 Man kann anhand der Formel bereits erkennen, dass bei einem Modulationsindex von 0 keine Modulation stattfindet. Dabei wird der Frequenzhub der Modulation auch gleich 0, da $ I=\frac{d}{m} $ und somit $ d = 0\cdot m = 0 $ gilt. 
-\[ e(t) = A \sin(\alpha t + 0 \sin(\beta t))  \Rightarrow  e(t) = A \sin(\alpha t) \]
+\begin{equation} e(t) = A \sin(\alpha t + 0 \sin(\beta t))  \Rightarrow  e(t) = A \sin(\alpha t) \end{equation}
 Die Frequenz in Hz (Schwingungen pro Sekunde) ergibt sich, wenn man die Kreisfrequenz (siehe oben) durch $2\pi$ teilt.
 Anhand der Frequenz des Modulators kann man sehen, wie oft der oben beschriebene Frequenzhub pro Sekunde durchlaufen wird. Beispiel: Bei einer Modulationsfrequenz von 440 Hz wird der Frequenzhub 440 mal pro Sekunde durchlaufen.
